Hovering changes background color and fix spacing

--- a/style.css
+++ b/style.css
@@ -177,6 +177,10 @@ body {
   outline: none; /* Make the a element not have an outline after selecting it */
 }
 
+.navbar a:hover {
+  background-color: #f1f1f1;
+}
+
 .wrapper {
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -204,7 +208,7 @@ body {
     transform: translate(0, 0);
     transition: all .2s ease-out;
     background: #fff;
-    margin-top: 9.65rem;
+    margin-top: 6.65rem;
 }
 
 .sidebar--fixed {
